# blue-moon-cooking

./: .env-sample  Dockerfile  README.md  Untitled Diagram.drawio  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
bmcook/: __init__.py  main.py
bmcook/api/rest/: recipe.py  sample_data.py
bmcook/core/: __init__.py  recipes.py
bmcook/db/: __init__.py  config.py  init_db.sql  recipes_db.py
bmcook/db/tools/: init_db.sql
bmcook/exceptions/: __init__.py  data_errors.py
bmcook/tests/data/: demo_data.sql
bmcook/tests/integration/: test_recipe_api.py
bmcook/tests/unit/: test_recipes_core.py
design/diagrams/: Untitled Diagram.drawio  bmcook_components.drawio  recipe_components.drawio  recipe_flows.drawio
test-results/: README.md
