[tool.poetry]
name = "bmcooking"
version = "0.1.0"
description = "The cooking central"
authors = ["Andrei Boyanov <andrei.boyanov@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "bmcooking"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
