[tool.poetry]
name = "bmcooking"
version = "0.1.0"
description = "The cooking central"
authors = ["Andrei Boyanov <andrei.boyanov@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "bmcook"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
